--- a/FindAgent/stylesheets/styles.css
+++ b/FindAgent/stylesheets/styles.css
@@ -63,13 +63,14 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   display: block;
 }
 
-/* line 8, ../sass/styles.scss */
+/* line 11, ../sass/styles.scss */
 body {
+  font-family: 'Open Sans', sans-serif;
   font-size: 62.5%;
   text-align: center;
 }
 
-/* line 12, ../sass/styles.scss */
+/* line 16, ../sass/styles.scss */
 .hero {
   max-width: 110em;
   margin: 0 auto;
@@ -77,23 +78,23 @@ body {
   background-size: cover;
   color: white;
 }
-/* line 19, ../sass/styles.scss */
+/* line 23, ../sass/styles.scss */
 .hero header {
   overflow: hidden;
   *zoom: 1;
 }
-/* line 20, ../sass/styles.scss */
+/* line 24, ../sass/styles.scss */
 .hero header img {
   width: 15em;
   height: 3em;
   margin: 1em .5em;
   float: left;
 }
-/* line 26, ../sass/styles.scss */
+/* line 30, ../sass/styles.scss */
 .hero header ul {
   float: right;
 }
-/* line 28, ../sass/styles.scss */
+/* line 32, ../sass/styles.scss */
 .hero header ul li {
   float: left;
   margin: 1em .5em;
@@ -101,38 +102,41 @@ body {
   border: 1px solid transparent;
   border-radius: 2px;
 }
-/* line 34, ../sass/styles.scss */
+/* line 38, ../sass/styles.scss */
 .hero header ul li:last-child {
   border: 1px solid white;
 }
-/* line 41, ../sass/styles.scss */
+/* line 45, ../sass/styles.scss */
 .hero h1 {
   font-size: 4em;
   padding: 1em 0 .5em 0;
+  font-weight: bold;
 }
-/* line 45, ../sass/styles.scss */
+/* line 50, ../sass/styles.scss */
 .hero h2 {
   font-size: 2em;
+  color: #d9dada;
 }
-/* line 49, ../sass/styles.scss */
+/* line 55, ../sass/styles.scss */
 .hero form {
   padding: 2em 0 4em 0;
 }
-/* line 52, ../sass/styles.scss */
+/* line 58, ../sass/styles.scss */
 .hero form input[type="text"] {
   padding: 1em;
   border: 0;
   width: 18em;
   border-radius: 2px 0 0 2px;
-  background-color: #fff;
+  background-color: #efefef;
   opacity: .3;
 }
-/* line 61, ../sass/styles.scss */
+/* line 67, ../sass/styles.scss */
 .hero form input[type="button"] {
   color: white;
   padding: 1em;
   border: 0;
   width: 6em;
   border-radius: 0 2px 2px 0;
-  background-color: lightgreen;
+  text-transform: uppercase;
+  background-color: #6cdcac;
 }
