--- a/FindAgent/sass/styles.scss
+++ b/FindAgent/sass/styles.scss
@@ -13,6 +13,7 @@ body {
   font-size: 62.5%;
   text-align: center;
 }
+
 .hero {
   max-width: 110em;
   margin: 0 auto;
@@ -73,5 +74,40 @@ body {
       text-transform: uppercase;
       background-color: $button-color;
     }
+  }
+}
+
+.numbers {
+  width: 80%;
+  margin: 0 auto;
+
+  ul {
+    position: relative;
+    top: -1em;
+    background: $bg-color;
+
+    li {
+      float: left;
+      width: 25%;
+      box-sizing: border-box;
+      border-top: 1px solid $secondy-text-color;
+      border-bottom: 1px solid $secondy-text-color;
+      border-left: 1px solid $secondy-text-color;
+
+      &:last-child {
+        border-right: 1px solid $secondy-text-color;
+      }
+
+      h2 {
+        font-size: 2em;
+        padding: 1em 0;
+      }
+
+      h3 {
+        padding: 0 0 2em 0;
+      }
+    }
+
+    @include clearfix;
   }
 }
