--- a/FindAgent/sass/styles.scss
+++ b/FindAgent/sass/styles.scss
@@ -1,12 +1,25 @@
 @import "compass/reset";
 @import "compass/css3";
 @import "compass/utilities/general/clearfix";
+@import "icomoon";
 
 $highlight-text-color: white;
 $bg-color: #efefef;
 $text-color: #4f4f4f;
 $secondy-text-color: #d9dada;
 $button-color: #6cdcac;
+$border-color: #9c9c9c;
+
+@font-face {
+  font-family: "icomoon";
+  src: url('../fonts/icomoon.eot?200299');
+  src: url('../fonts/icomoon.eot?#iefix200299') format('embedded-opentype'),
+       url('../fonts/icomoon.woff?200299') format('woff'),
+       url('../fonts/icomoon.ttf?200299') format('truetype'),
+       url('../fonts/icomoon.svg?200299#icomoon') format('svg');
+  font-size: normal;
+  font-style: normal;
+}
 
 body {
   font-family: 'Open Sans', sans-serif;
@@ -109,5 +122,77 @@ body {
     }
 
     @include clearfix;
+  }
+}
+
+.how-it-works {
+  h2 {
+    font-size: 2em;
+    text-transform: uppercase;
+    padding: 1em 0;
+
+    &:after {
+      display: block;
+      content: "";
+      background-color: $border-color;
+      width: 2em;
+      height: .1em;
+      margin: .4em auto;
+    }
+  }
+
+  ul {
+    li {
+      float: left;
+      width: 33.33%;
+      position: relative;
+
+      &:before {
+        display: block;
+        content: "";
+        background-color: $border-color;
+        width: 100%;
+        height: 1px;
+        position: absolute;
+        top: 4em;
+        left: 50%;
+        margin: 0 2em;
+      }
+
+      &:last-child:before {
+        display: none;
+      }
+
+      .detail {
+        .number {
+          font-size: 2em;
+          color: $border-color;
+          border: 1px solid $border-color;
+          width: 1em;
+          height: 1em;
+          display: block;
+          margin: 1em auto 2em auto;
+          padding: .4em;
+          @include border-radius(100%);
+          background-color: $bg-color;
+        }
+
+        i {
+          font-size: 3.6em;
+        }
+
+        .icon-list {
+          color: #eca95a;
+        }
+
+        .icon-pencil {
+          color: #ac9cd2;
+        }
+
+        .icon-users {
+          color: #4d99cb;
+        }
+      }
+    }
   }
 }
