--- a/FindAgent/stylesheets/styles.css
+++ b/FindAgent/stylesheets/styles.css
@@ -63,14 +63,97 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   display: block;
 }
 
-/* line 11, ../sass/styles.scss */
+@font-face {
+  font-family: 'icomoon';
+  src: url("fonts/icomoon.eot?n56p2a");
+  src: url("fonts/icomoon.eot?n56p2a#iefix") format("embedded-opentype"), url("fonts/icomoon.ttf?n56p2a") format("truetype"), url("fonts/icomoon.woff?n56p2a") format("woff"), url("fonts/icomoon.svg?n56p2a#icomoon") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+/* line 12, ../sass/icomoon.scss */
+[class^="icon-"], [class*=" icon-"] {
+  font-family: 'icomoon';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+/* line 26, ../sass/icomoon.scss */
+.icon-pencil:before {
+  content: "\e900";
+}
+
+/* line 29, ../sass/icomoon.scss */
+.icon-users:before {
+  content: "\e901";
+}
+
+/* line 32, ../sass/icomoon.scss */
+.icon-stats-dots:before {
+  content: "\e902";
+}
+
+/* line 35, ../sass/icomoon.scss */
+.icon-stats-bars:before {
+  content: "\e903";
+}
+
+/* line 38, ../sass/icomoon.scss */
+.icon-gift:before {
+  content: "\e904";
+}
+
+/* line 41, ../sass/icomoon.scss */
+.icon-list:before {
+  content: "\e905";
+}
+
+/* line 44, ../sass/icomoon.scss */
+.icon-earth:before {
+  content: "\e906";
+}
+
+/* line 47, ../sass/icomoon.scss */
+.icon-flag:before {
+  content: "\e907";
+}
+
+/* line 50, ../sass/icomoon.scss */
+.icon-checkbox-checked:before {
+  content: "\e908";
+}
+
+/* line 53, ../sass/icomoon.scss */
+.icon-checkbox-unchecked:before {
+  content: "\e909";
+}
+
+/* line 56, ../sass/icomoon.scss */
+.icon-truck:before {
+  content: "\e90a";
+}
+
+@font-face {
+  font-family: "icomoon";
+  src: url("../fonts/icomoon.eot?200299");
+  src: url("../fonts/icomoon.eot?#iefix200299") format("embedded-opentype"), url("../fonts/icomoon.woff?200299") format("woff"), url("../fonts/icomoon.ttf?200299") format("truetype"), url("../fonts/icomoon.svg?200299#icomoon") format("svg");
+  font-size: normal;
+  font-style: normal;
+}
+/* line 24, ../sass/styles.scss */
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 62.5%;
   text-align: center;
 }
 
-/* line 17, ../sass/styles.scss */
+/* line 30, ../sass/styles.scss */
 .hero {
   max-width: 110em;
   margin: 0 auto;
@@ -78,23 +161,23 @@ body {
   background-size: cover;
   color: white;
 }
-/* line 24, ../sass/styles.scss */
+/* line 37, ../sass/styles.scss */
 .hero header {
   overflow: hidden;
   *zoom: 1;
 }
-/* line 25, ../sass/styles.scss */
+/* line 38, ../sass/styles.scss */
 .hero header img {
   width: 15em;
   height: 3em;
   margin: 1em .5em;
   float: left;
 }
-/* line 31, ../sass/styles.scss */
+/* line 44, ../sass/styles.scss */
 .hero header ul {
   float: right;
 }
-/* line 33, ../sass/styles.scss */
+/* line 46, ../sass/styles.scss */
 .hero header ul li {
   float: left;
   margin: 1em .5em;
@@ -102,26 +185,26 @@ body {
   border: 1px solid transparent;
   border-radius: 2px;
 }
-/* line 39, ../sass/styles.scss */
+/* line 52, ../sass/styles.scss */
 .hero header ul li:last-child {
   border: 1px solid white;
 }
-/* line 46, ../sass/styles.scss */
+/* line 59, ../sass/styles.scss */
 .hero h1 {
   font-size: 4em;
   padding: 1em 0 .5em 0;
   font-weight: bold;
 }
-/* line 51, ../sass/styles.scss */
+/* line 64, ../sass/styles.scss */
 .hero h2 {
   font-size: 2em;
   color: #d9dada;
 }
-/* line 56, ../sass/styles.scss */
+/* line 69, ../sass/styles.scss */
 .hero form {
   padding: 2em 0 4em 0;
 }
-/* line 59, ../sass/styles.scss */
+/* line 72, ../sass/styles.scss */
 .hero form input[type="text"] {
   padding: 1em;
   border: 0;
@@ -130,7 +213,7 @@ body {
   background-color: #efefef;
   opacity: .3;
 }
-/* line 68, ../sass/styles.scss */
+/* line 81, ../sass/styles.scss */
 .hero form input[type="button"] {
   color: white;
   padding: 1em;
@@ -141,12 +224,12 @@ body {
   background-color: #6cdcac;
 }
 
-/* line 80, ../sass/styles.scss */
+/* line 93, ../sass/styles.scss */
 .numbers {
   width: 80%;
   margin: 0 auto;
 }
-/* line 84, ../sass/styles.scss */
+/* line 97, ../sass/styles.scss */
 .numbers ul {
   position: relative;
   top: -1em;
@@ -154,7 +237,7 @@ body {
   overflow: hidden;
   *zoom: 1;
 }
-/* line 89, ../sass/styles.scss */
+/* line 102, ../sass/styles.scss */
 .numbers ul li {
   float: left;
   width: 25%;
@@ -163,16 +246,85 @@ body {
   border-bottom: 1px solid #d9dada;
   border-left: 1px solid #d9dada;
 }
-/* line 97, ../sass/styles.scss */
+/* line 110, ../sass/styles.scss */
 .numbers ul li:last-child {
   border-right: 1px solid #d9dada;
 }
-/* line 101, ../sass/styles.scss */
+/* line 114, ../sass/styles.scss */
 .numbers ul li h2 {
   font-size: 2em;
   padding: 1em 0;
 }
-/* line 106, ../sass/styles.scss */
+/* line 119, ../sass/styles.scss */
 .numbers ul li h3 {
   padding: 0 0 2em 0;
+}
+
+/* line 129, ../sass/styles.scss */
+.how-it-works h2 {
+  font-size: 2em;
+  text-transform: uppercase;
+  padding: 1em 0;
+}
+/* line 134, ../sass/styles.scss */
+.how-it-works h2:after {
+  display: block;
+  content: "";
+  background-color: #9c9c9c;
+  width: 2em;
+  height: .1em;
+  margin: .4em auto;
+}
+/* line 145, ../sass/styles.scss */
+.how-it-works ul li {
+  float: left;
+  width: 33.33%;
+  position: relative;
+}
+/* line 150, ../sass/styles.scss */
+.how-it-works ul li:before {
+  display: block;
+  content: "";
+  background-color: #9c9c9c;
+  width: 100%;
+  height: 1px;
+  position: absolute;
+  top: 4em;
+  left: 50%;
+  margin: 0 2em;
+}
+/* line 162, ../sass/styles.scss */
+.how-it-works ul li:last-child:before {
+  display: none;
+}
+/* line 167, ../sass/styles.scss */
+.how-it-works ul li .detail .number {
+  font-size: 2em;
+  color: #9c9c9c;
+  border: 1px solid #9c9c9c;
+  width: 1em;
+  height: 1em;
+  display: block;
+  margin: 1em auto 2em auto;
+  padding: .4em;
+  -moz-border-radius: 100%;
+  -webkit-border-radius: 100%;
+  border-radius: 100%;
+  background-color: #efefef;
+}
+/* line 180, ../sass/styles.scss */
+.how-it-works ul li .detail i {
+  font-size: 3.6em;
+}
+/* line 184, ../sass/styles.scss */
+.how-it-works ul li .detail .icon-list {
+  color: #eca95a;
+}
+/* line 188, ../sass/styles.scss */
+.how-it-works ul li .detail .icon-pencil {
+  color: #ac9cd2;
+}
+/* line 192, ../sass/styles.scss */
+.how-it-works ul li .detail .icon-users {
+  color: #4d99cb;
 }
